--- a/libsherpacore/src/Makefile
+++ b/libsherpacore/src/Makefile
@@ -1,5 +1,5 @@
 LIBNAME  = libsherpacore
-INCDIR  += -I../../libconio/src/include 
+INCDIR  += -I../../libemb/libconio/src/include 
 OBJS    += packet.o pin_msp430.o core_proto.o core_handlers.o core_handlers_msp430.o packet_handler.o
 
 include ../../common_lib.mk
